--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ body {
     background-color: #003bff;
     margin: 40px 20px;
     border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .newsletter-title {
